# xcspec

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: framework_info.rs  main.rs  utils.rs
src/plist_processing/: extractors.rs  mod.rs  swift_details.rs
src/xcframework_processing/: extractors.rs  mod.rs  swift_details.rs
