[package]
name = "xcspec"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
zip = "2.1.3"
plist = "1.6.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["preserve_order"] }
serde_yaml = "0.9.34"
tempfile = "3.10.1"